[package]
name = "thunder"
description = "Create simple commandline apps with *zero* boilerplate!"
version = "0.1.2"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
license = "MIT/X11 OR Apache-2.0"
readme = "README.md"
docs = "docs.rs/thunder"

[lib]
proc-macro = true

[dependencies]
clap = "2.*"
syn = { version = "0.12", features = ["extra-traits", "full", "fold", "visit", "visit-mut"] }
quote = "0.4"
