[package]
name = "thunder"
description = "Create simple commandline apps with *zero* boilerplate!"
version = "0.3.1"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
license = "MIT/X11 OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/thunder"
repository = "https://github.com/spacekookie/thunder"
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]

[lib]
proc-macro = true

[dependencies]
clap = "2.0"
syn = { version = "0.12", features = ["extra-traits", "full", "fold", "visit", "visit-mut"] }
quote = "0.4"
